manifests/traefik/traefik-route-dashboard.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  parentRefs:
    - name: traefik-gateway
      sectionName: websecure

  hostnames:
    - traefik.k8s.harish2k01.xyz

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: api@internal
          kind: TraefikService
